kustomize/stateful-set.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: nifi
  namespace: nifi
  labels:
    app.kubernetes.io/part-of: nifi-system
spec:
  selector:
    matchLabels:
      app: nifi
  serviceName: nifi
  replicas: 1
  minReadySeconds: 10
  template:
    metadata:
      labels:
        app: nifi
        app.kubernetes.io/part-of: nifi-system
    spec:
      terminationGracePeriodSeconds: 10
      containers:
      - name: server
        image: apache/nifi:1.18.0
        ports:
        - containerPort: 8443
