kustomize/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: nifi
  namespace: nifi
  annotations:
    projectcontour.io/upstream-protocol.tls: "8443"
spec:
  selector:
    app: nifi
  ports:
  - name: https
    port: 8443
