kustomize/httpproxy.yaml
apiVersion: projectcontour.io/v1
kind: HTTPProxy
metadata:
  name: nifi
  namespace: nifi
spec:
  virtualhost:
    fqdn: nifi.tap.h2o-2-1249.h2o.vmware.com
    tls:
      passthrough: true
      # secretName: tanzu-system-ingress/tap
  routes:
    - conditions:
      - prefix: /
      services:
      - name: nifi
        port: 8443
      requestHeadersPolicy:
        set:
        - name: Host
          value: "localhost:8443"
      #   - name: X-ProxyScheme
      #     value: "https"
      #   - name: X-ProxyHost
      #     value: "nifi.tap.h2o-2-1249.h2o.vmware.com"
      #   - name: X-ProxyPort
      #     value: "443"
      #   - name: X-ProxyContextPath
      #     value: "/"
  # tcpproxy:
  #   services:
  #     - name: nifi
  #       port: 8443
  #       protocol: tls
